SLICOT_FORTRAN_SOURCES= src/slicot/sb04pd.f \
src/slicot/ib01ad.f \
src/slicot/tb01wd.f \
src/slicot/ib01py.f \
src/slicot/mb01rx.f \
src/slicot/ib01md.f \
src/slicot/sb02ru.f \
src/slicot/sb04nw.f \
src/slicot/sb10dd.f \
src/slicot/mb04id.f \
src/slicot/sb04ny.f \
src/slicot/ib01qd.f \
src/slicot/sb04px.f \
src/slicot/sb04rw.f \
src/slicot/sb04ry.f \
src/slicot/mb01qd.f \
src/slicot/mb01ud.f \
src/slicot/sb02od.f \
src/slicot/mb02ud.f \
src/slicot/sb10pd.f \
src/slicot/sb03od.f \
src/slicot/mb03ud.f \
src/slicot/sb02sd.f \
src/slicot/ib01oy.f \
src/slicot/sb02ms.f \
src/slicot/ab13md.f \
src/slicot/sb03or.f \
src/slicot/mb03oy.f \
src/slicot/ma02fd.f \
src/slicot/sb03ot.f \
src/slicot/mb04oy.f \
src/slicot/sb04mu.f \
src/slicot/sb03mw.f \
src/slicot/sb02ov.f \
src/slicot/sb03ov.f \
src/slicot/sb04mw.f \
src/slicot/sb03my.f \
src/slicot/sb04my.f \
src/slicot/sb04qu.f \
src/slicot/ib01pd.f \
src/slicot/sb03qy.f \
src/slicot/sb03sx.f \
src/slicot/sb04qy.f \
src/slicot/mb01pd.f \
src/slicot/mb02pd.f \
src/slicot/mb01td.f \
src/slicot/sb02nd.f \
src/slicot/sb04nd.f \
src/slicot/sb02rd.f \
src/slicot/sb04rd.f \
src/slicot/ib01cd.f \
src/slicot/ib01px.f \
src/slicot/ma02ad.f \
src/slicot/ab01od.f \
src/slicot/mb01ru.f \
src/slicot/ma02ed.f \
src/slicot/mb04ny.f \
src/slicot/mb01ry.f \
src/slicot/sb04nv.f \
src/slicot/ib01od.f \
src/slicot/sb04nx.f \
src/slicot/sb10fd.f \
src/slicot/select.f \
src/slicot/sb04rv.f \
src/slicot/mb04kd.f \
src/slicot/sb04py.f \
src/slicot/sb04rx.f \
src/slicot/mb03od.f \
src/slicot/mb04od.f \
src/slicot/mb01sd.f \
src/slicot/sb03md.f \
src/slicot/sb04md.f \
src/slicot/sb02qd.f \
src/slicot/sb10rd.f \
src/slicot/sb04qd.f \
src/slicot/ib01my.f \
src/slicot/ib01bd.f \
src/slicot/mb04iy.f \
src/slicot/sb02mr.f \
src/slicot/ab01nd.f \
src/slicot/sb02mt.f \
src/slicot/sb04mr.f \
src/slicot/sb03mv.f \
src/slicot/sb02ou.f \
src/slicot/mb02qy.f \
src/slicot/sb03ou.f \
src/slicot/sb04qr.f \
src/slicot/sb03mx.f \
src/slicot/ib01nd.f \
src/slicot/sb02oy.f \
src/slicot/sb03oy.f \
src/slicot/sb03qx.f \
src/slicot/ib01rd.f \
src/slicot/sb03sy.f \
src/slicot/mb04nd.f \
src/slicot/mb01rd.f \
src/slicot/mb01vd.f \
src/slicot/sb10qd.f



CACSD_FORTRAN_SOURCES = \
src/fortran/riccpack.f \
src/fortran/jacl2.f \
src/fortran/onface.f \
src/fortran/hhdml.f \
src/fortran/tild.f \
src/fortran/degl2.f \
src/fortran/dqrdc.f \
src/fortran/qvalz.f \
src/fortran/ssxmc.f \
src/fortran/dfrmg.f \
src/fortran/hessl2.f \
src/fortran/ZB03OD.f \
src/fortran/rtitr.f \
src/fortran/watfac.f \
src/fortran/sszer.f \
src/fortran/mzdivq.f \
src/fortran/expan.f \
src/fortran/optml2.f \
src/fortran/wdegre.f \
src/fortran/phi.f \
src/fortran/dgeco.f \
src/fortran/ricd.f \
src/fortran/shrslv.f \
src/fortran/qhesz.f \
src/fortran/rilac.f \
src/fortran/inva.f \
src/fortran/scaleg.f \
src/fortran/arl2.f \
src/fortran/wesidu.f \
src/fortran/dzdivq.f \
src/fortran/arl2a.f \
src/fortran/wgeco.f \
src/fortran/lq.f \
src/fortran/outl2.f \
src/fortran/dhetr.f \
src/fortran/ereduc.f \
src/fortran/domout.f \
src/fortran/polmc.f \
src/fortran/rootgp.f \
src/fortran/feq.f \
src/fortran/dgedi.f \
src/fortran/fout.f \
src/fortran/deg1l2.f \
src/fortran/modul.f \
src/fortran/scapol.f \
src/fortran/wgesl.f \
src/fortran/dlslv.f \
src/fortran/giv.f \
src/fortran/dqrsl.f \
src/fortran/storl2.f \
src/fortran/dqrsm.f \
src/fortran/calsca.f \
src/fortran/qitz.f \
src/fortran/fstair.f \
src/fortran/front.f \
src/fortran/calcsc.f \
src/fortran/wgefa.f

GATEWAY_FORTRAN_SOURCES =  sci_gateway/fortran/sci_zrankqr.f \
sci_gateway/fortran/sci_freq.f \
sci_gateway/fortran/sci_sylv.f \
sci_gateway/fortran/sci_rankqr.f \
sci_gateway/fortran/sci_ltitr.f \
sci_gateway/fortran/sci_ldiv.f \
sci_gateway/fortran/sci_sorder.f \
sci_gateway/fortran/sci_mucomp.f \
sci_gateway/fortran/sci_arl2.f \
sci_gateway/fortran/sci_gspec.f \
sci_gateway/fortran/sci_ricc2.f \
sci_gateway/fortran/sci_rtitr.f \
sci_gateway/fortran/sci_lyap.f \
sci_gateway/fortran/sci_ereduc.f \
sci_gateway/fortran/sci_ppol.f \
sci_gateway/fortran/sci_ricc.f \
sci_gateway/fortran/sci_hinf.f \
sci_gateway/fortran/sci_tzer.f \
sci_gateway/fortran/sci_linmeq.f \
sci_gateway/fortran/sci_findbd.f \
sci_gateway/fortran/sci_sident.f \
sci_gateway/fortran/sci_fstair.f \
sci_gateway/fortran/sci_dhinf.f \
sci_gateway/fortran/sci_gschur.f \
sci_gateway/fortran/sci_residu.f

libcacsd_la_includedir=$(includedir)/cacsd

libcacsd_la_include_HEADERS = includes/gw_cacsd0.h \
includes/gw_cacsd1.h \
includes/gw_cacsd2.h \
includes/gw_cacsd3.h

libcacsd_la_FFLAGS= -Iincludes/ 

lib_LTLIBRARIES = libcacsd.la

libcacsd_la_SOURCES = $(CACSD_FORTRAN_SOURCES) $(SLICOT_FORTRAN_SOURCES) $(GATEWAY_FORTRAN_SOURCES)

libcacsd_la_DEPENDENCIES = \
	$(top_builddir)/libs/lapack/liblapack.la \
	$(top_builddir)/libs/blas/libblas.la \
	$(top_builddir)/modules/polynomials/libpolynomials.la \
	$(top_builddir)/modules/core/libcore.la 

# \
#	$(top_builddir)/routines/console/libconsole.la 
#	$(top_builddir)/routines/interf/libinterf.la \ => interf depends of everything 
#	$(top_builddir)/routines/xsci/libxsci.la \ => causes a crappy cyclic dep

libcacsd_la_LIBADD = $(libcacsd_la_DEPENDENCIES)

libcacsd_la_PKGCONFIG = cacsd.pc
